--- a/Microproject.ipynb
+++ b/Microproject.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1v2v7samFM-5hM97SLMOye3Rcz99FsCN1",
-      "authorship_tag": "ABX9TyMBDnWavNMNHXFMq7A+3kTe",
+      "authorship_tag": "ABX9TyNCEQFbXFuKPJvem6P5NZgs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -313,11 +313,11 @@
         "df.show(5)"
       ],
       "metadata": {
-        "id": "8BC_pzF4Q45K",
-        "outputId": "0a07ad5f-ae52-4d5c-a26d-1dbefcd073ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8BC_pzF4Q45K",
+        "outputId": "0a07ad5f-ae52-4d5c-a26d-1dbefcd073ad"
       },
       "execution_count": 7,
       "outputs": [
@@ -491,11 +491,11 @@
         "spark.sql(\"SELECT DISTINCT call_type FROM global_temp.fire_department\").show(truncate=False)"
       ],
       "metadata": {
-        "id": "mY59d3Q01zjS",
-        "outputId": "a4d0e13f-aeed-4942-e65e-b1b511e1209f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mY59d3Q01zjS",
+        "outputId": "a4d0e13f-aeed-4942-e65e-b1b511e1209f"
       },
       "execution_count": 12,
       "outputs": [
@@ -536,11 +536,11 @@
         "df.select('call_type').distinct().show(truncate=False)"
       ],
       "metadata": {
-        "id": "d8TdLXVIGITq",
-        "outputId": "1b825e1a-a5c0-4675-d37b-6e7c5230b360",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "d8TdLXVIGITq",
+        "outputId": "1b825e1a-a5c0-4675-d37b-6e7c5230b360"
       },
       "execution_count": 13,
       "outputs": [
@@ -727,11 +727,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "CXLnIOCK4-of",
-        "outputId": "43c1f11d-a326-4988-9f11-10b7f9170771",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CXLnIOCK4-of",
+        "outputId": "43c1f11d-a326-4988-9f11-10b7f9170771"
       },
       "execution_count": 30,
       "outputs": [
@@ -767,17 +767,18 @@
       "source": [
         "df_time_response \\\n",
         ".select(df_time_response.call_type, df_time_response.Time_response_min) \\\n",
-        ".sort(df_time_response.Time_response_min.desc()) \\\n",
-        ".show(truncate=False)"
+        ".sort(df_time_response.Time_response_min.asc()) \\\n",
+        ".where(df_time_response.Time_response_min > 5) \\\n",
+        ".show(100, truncate=False)"
       ],
       "metadata": {
-        "id": "BXlZt0--OUGo",
-        "outputId": "20b5f929-5037-47c9-8b62-32cdb828a78c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BXlZt0--OUGo",
+        "outputId": "0d2f959a-0faf-4319-9bcf-3ce3752fd744"
       },
-      "execution_count": 33,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -786,28 +787,103 @@
             "+----------------------------------+-----------------+\n",
             "|call_type                         |Time_response_min|\n",
             "+----------------------------------+-----------------+\n",
-            "|Medical Incident                  |25               |\n",
-            "|Medical Incident                  |23               |\n",
-            "|Citizen Assist / Service Call     |21               |\n",
-            "|Medical Incident                  |20               |\n",
-            "|Medical Incident                  |19               |\n",
-            "|Medical Incident                  |19               |\n",
-            "|Medical Incident                  |17               |\n",
-            "|Medical Incident                  |15               |\n",
-            "|Medical Incident                  |14               |\n",
-            "|Structure Fire / Smoke in Building|13               |\n",
-            "|Medical Incident                  |13               |\n",
-            "|Medical Incident                  |12               |\n",
-            "|Traffic Collision                 |12               |\n",
-            "|Medical Incident                  |10               |\n",
-            "|Structure Fire / Smoke in Building|10               |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Alarms                            |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Structure Fire / Smoke in Building|6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Odor (Strange / Unknown)          |6                |\n",
+            "|Structure Fire / Smoke in Building|6                |\n",
+            "|Odor (Strange / Unknown)          |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Alarms                            |6                |\n",
+            "|Electrical Hazard                 |6                |\n",
+            "|Other                             |6                |\n",
+            "|Structure Fire / Smoke in Building|6                |\n",
+            "|Traffic Collision                 |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Alarms                            |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Structure Fire / Smoke in Building|6                |\n",
+            "|Medical Incident                  |6                |\n",
+            "|Medical Incident                  |7                |\n",
+            "|Citizen Assist / Service Call     |7                |\n",
+            "|Medical Incident                  |7                |\n",
+            "|Structure Fire / Smoke in Building|7                |\n",
+            "|Medical Incident                  |7                |\n",
+            "|Elevator / Escalator Rescue       |7                |\n",
+            "|Odor (Strange / Unknown)          |7                |\n",
+            "|Medical Incident                  |7                |\n",
+            "|Medical Incident                  |7                |\n",
+            "|Alarms                            |7                |\n",
+            "|Medical Incident                  |7                |\n",
+            "|Structure Fire / Smoke in Building|7                |\n",
+            "|Alarms                            |7                |\n",
+            "|Alarms                            |7                |\n",
+            "|Structure Fire / Smoke in Building|7                |\n",
+            "|Medical Incident                  |7                |\n",
+            "|Structure Fire / Smoke in Building|7                |\n",
+            "|Medical Incident                  |7                |\n",
+            "|Traffic Collision                 |7                |\n",
+            "|Medical Incident                  |7                |\n",
+            "|Structure Fire / Smoke in Building|7                |\n",
+            "|Medical Incident                  |8                |\n",
+            "|Medical Incident                  |8                |\n",
+            "|Medical Incident                  |8                |\n",
+            "|Medical Incident                  |8                |\n",
+            "|Medical Incident                  |8                |\n",
+            "|Medical Incident                  |8                |\n",
+            "|Medical Incident                  |8                |\n",
+            "|Structure Fire / Smoke in Building|8                |\n",
             "|Traffic Collision                 |9                |\n",
             "|Medical Incident                  |9                |\n",
             "|Medical Incident                  |9                |\n",
             "|Medical Incident                  |9                |\n",
             "|Medical Incident                  |9                |\n",
+            "|Medical Incident                  |9                |\n",
+            "|Alarms                            |9                |\n",
+            "|Other                             |9                |\n",
+            "|Alarms                            |9                |\n",
+            "|Medical Incident                  |10               |\n",
+            "|Structure Fire / Smoke in Building|10               |\n",
+            "|Medical Incident                  |12               |\n",
+            "|Traffic Collision                 |12               |\n",
+            "|Structure Fire / Smoke in Building|13               |\n",
+            "|Medical Incident                  |13               |\n",
+            "|Medical Incident                  |14               |\n",
+            "|Medical Incident                  |15               |\n",
+            "|Medical Incident                  |17               |\n",
+            "|Medical Incident                  |19               |\n",
+            "|Medical Incident                  |19               |\n",
+            "|Medical Incident                  |20               |\n",
+            "|Citizen Assist / Service Call     |21               |\n",
+            "|Medical Incident                  |23               |\n",
+            "|Medical Incident                  |25               |\n",
             "+----------------------------------+-----------------+\n",
-            "only showing top 20 rows\n",
             "\n"
           ]
         }
@@ -830,35 +906,35 @@
     {
       "cell_type": "code",
       "source": [
-        "spark.sql(\"SELECT DISTINCT call_type, COUNT(call_type) AS Total FROM global_temp.fire_department GROUP BY call_type ORDER BY Total DESC\").show(10)"
+        "spark.sql(\"SELECT DISTINCT call_type, COUNT(call_type) AS Total FROM global_temp.fire_department GROUP BY call_type ORDER BY Total DESC\").show(10, truncate=False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "blJj1mvqakLM",
-        "outputId": "52ce30ae-2ce7-457c-8d07-3236a868cd02"
+        "outputId": "2efd8c71-3235-463c-ef16-e14414b34c86"
       },
-      "execution_count": 20,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+--------------------+-----+\n",
-            "|           call_type|Total|\n",
-            "+--------------------+-----+\n",
-            "|    Medical Incident|  600|\n",
-            "|Structure Fire / ...|  147|\n",
-            "|              Alarms|  112|\n",
-            "|   Traffic Collision|   72|\n",
-            "|Citizen Assist / ...|   18|\n",
-            "|               Other|   13|\n",
-            "|        Vehicle Fire|    8|\n",
-            "|Odor (Strange / U...|    7|\n",
-            "|Gas Leak (Natural...|    6|\n",
-            "|        Outside Fire|    4|\n",
-            "+--------------------+-----+\n",
+            "+----------------------------------+-----+\n",
+            "|call_type                         |Total|\n",
+            "+----------------------------------+-----+\n",
+            "|Medical Incident                  |600  |\n",
+            "|Structure Fire / Smoke in Building|147  |\n",
+            "|Alarms                            |112  |\n",
+            "|Traffic Collision                 |72   |\n",
+            "|Citizen Assist / Service Call     |18   |\n",
+            "|Other                             |13   |\n",
+            "|Vehicle Fire                      |8    |\n",
+            "|Odor (Strange / Unknown)          |7    |\n",
+            "|Gas Leak (Natural and LP Gases)   |6    |\n",
+            "|Outside Fire                      |4    |\n",
+            "+----------------------------------+-----+\n",
             "only showing top 10 rows\n",
             "\n"
           ]
